# SymptomsDashboard

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: crud.py  db.py  dbConn.py  main.py  models.py  schemas.py
backend/app/routes/: analytics.py  appointments.py  doctors.py  logs.py  patients.py  treatments.py
backend/app/services/: llm.py  prompts.py  summary.py
backend/dev_data/: appointments.csv  daily_logs.csv  doctors.csv  patients.csv  treatments.csv
backend/proto/: try_db.py
backend/scripts/: dev_seed_data.py
db/: Dockerfile  init.sh  init.sql  pg_hba.conf  postgres.conf
llama-server/: docker-compose.yml
pgadmin/: servers.json
