[project]
name = "symptoms-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2.0",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
    "pandas>=3.0.2",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-core>=1.3.2",
]
